--- a/style.css
+++ b/style.css
@@ -8,4 +8,11 @@ html, body {
     height: 100%;
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sketch-container {
+    display: flex;
+    flex-flow: row wrap;
 }
