--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html, body {
     height: 100%;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
