--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-html, body {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
@@ -9,11 +14,16 @@ html, body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .sketch-container {
     display: flex;
     flex-flow: row wrap;
+    border: 4px black solid;
+}
+
+.btn {
+    padding: 15px 50px;
 }
