--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -16,14 +17,30 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    background-color: #4abdac;
+    color: white;
 }
 
 .sketch-container {
     display: flex;
     flex-flow: row wrap;
-    border: 4px black solid;
+    border: 4px #DFDCe3 solid;
 }
 
-.btn {
+.reset-btn {
     padding: 15px 50px;
+    background-color: #FC4A1A;
+    color: white;
+    border: none;
+    border-radius: 15px;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.reset-btn:hover {
+    transform: scale(1.2);
+}
+
+.title {
+    font-size: 48px;
 }
