--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 /* Element Styling */
 
-.reset-btn {
+.btn {
     padding: 15px 50px;
     background-color: red;
     color: white;
@@ -56,4 +56,8 @@ body {
 
 .red-text {
     color: red;
+}
+
+.hidden {
+    display: none;
 }
